--- a/common-styles/nav.css
+++ b/common-styles/nav.css
@@ -1,104 +1,123 @@
-nav{
-    background-color: #393333;
+:root {
+    --nav-bg: #393333;
+    --nav-link-bg: rgb(20, 231, 161);
+    --nav-link-hover-bg: #48e5c2;
+    --text-color: white;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    overflow-x: hidden;
+}
+
+nav {
+    background-color: var(--nav-bg);
     box-shadow: 0 1em 1em 0 rgba(0, 0, 0, 0.1);
-}
-
-nav .container{
-    display: flex;
-    padding: 1em;
-    justify-content: space-between;
-}
-
-.menu-icon{
-    display: none;
-}
-
-nav ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5em;
     width: 100vw;
+    position: relative;
+}
+
+nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+    width: 100%;
 }
 
 nav img {
     max-width: 100px;
 }
 
-nav ul li {
-    background-color: rgb(20, 231, 161);
-    padding: 1em;
-    border-radius: 1em;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    font-size: 16px;
-    justify-content: center;
-    flex: 0 10%;
-    align-items: center;
-    text-align: center;
+.menu-icon {
+    display: none;
 }
 
-nav ul li a{
+nav ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+nav ul li {
+    background-color: var(--nav-link-bg);
+    padding: 1em;
+    border-radius: 1em;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+    font-size: 16px;
+    text-align: center;
+    flex: 1;
+    margin: 0 0.5em;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    max-width: 200px;
+}
+
+nav ul li:hover {
+    background-color: var(--nav-link-hover-bg);
+    transform: scale(1.05);
+}
+
+nav ul li a {
     display: block;
     width: 100%;
     height: 100%;
-}
-
-
-nav ul li:hover {
-    background-color: #48e5c2;
-    transform: scale(1.1);
+    text-decoration: none;
+    color: inherit;
 }
 
 @media (max-width: 768px) {
-    nav{
+    nav {
         border-radius: 0;
+        width: 100vw; 
     }
+
+    nav img {
+        display: none;
+    }
+
+    .menu-icon {
+        display: flex;
+        align-items: center;
+        gap: 2em;
+        cursor: pointer;
+        color: var(--text-color);
+    }
+
+    .menu-icon span {
+        font-size: 30px;
+    }
+
     nav ul {
         display: none;
         flex-direction: column;
-        width: 100%;
         position: absolute;
         top: 60px;
         left: 0;
-        background-color: #393333;
+        width: 100vw;
+        padding: 4em 1em;
+        background-color: var(--nav-bg);
         box-shadow: 0 1em 1em 0 rgba(0, 0, 0, 0.1);
-        margin-top: 1em;
-        padding: 4em;
         z-index: 9999;
     }
 
-    nav .menu-icon {
+    nav ul.active {
         display: flex;
-        cursor: pointer;
-        align-items: center;
-        justify-content: center;
-        gap: 2em;
-        color: white;
-    }
-
-    nav .menu-icon span {
-        font-size: 30px;
-        color: white;
     }
 
     nav ul li {
         width: 80%;
-        text-align: center;
+        margin: 1em auto;
     }
 
     nav ul li a {
-        display: block;
-        color: white;
-        text-decoration: none;
+        color: var(--text-color);
     }
-
-    nav ul.active {
-        display: flex;        
-    }
-    
-
-    nav img{
-        display: none;
-    }
-
 }
