--- a/pages/projects-page/project-styles.css
+++ b/pages/projects-page/project-styles.css
@@ -63,6 +63,10 @@ main {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 1em;
+    height: 10rem;
+    object-fit: contain;
+
 }
 
 .project-card h3 {
