--- a/common-styles/footer.css
+++ b/common-styles/footer.css
@@ -1,15 +1,28 @@
-footer{
-    background-color: rgb(30, 30, 30);
-    color: white;
+footer {
+    background-color: #2E3944;
+    color: #D3D9D4;
     padding: 2em 1em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+    bottom: 0;
 }
 
-footer .container{
+footer .container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 footer p {
-    opacity: 0.7;
+    opacity: 0.8;
+    font-size: 14px;
+    margin: 0;
+    color: #D3D9D4;
+    width: 100%;
 }
