--- a/index-stlyes/banner.css
+++ b/index-stlyes/banner.css
@@ -1,9 +1,9 @@
-body{
-    background-color: #5f5959;
+body {
+    background-color: #212A31;
 }
 
 main {
-    background-color: #5f5959;
+    background-color: #212A31;
     padding: 4em 0;
     width: 100%;
 }
@@ -12,19 +12,20 @@ main img {
     width: 100%;
     object-fit: cover;
     border-radius: 1em;
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+                rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+                rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    max-width: 500px;
 }
 
 main .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     justify-content: space-around;
     padding: 3em 5em;
     gap: 3em;
     flex-wrap: wrap;
 }
-
 
 main .image-container {
     border-radius: 15px;
@@ -36,24 +37,20 @@ main .image-container:hover {
     transform: scale(1.05);
 }
 
-
 main .context h1 {
-    font-size: 3em;
     font-size: 64px;
     margin-bottom: 0.5em;
     font-weight: bold;
     letter-spacing: 1px;
-    color: white;
+    color: #D3D9D4;
 }
 
 main .context h2 {
-    font-size: 1.75em;
     font-size: 32px;
     font-weight: normal;
     line-height: 1.4;
-    color: white;
+    color: #D3D9D4;
 }
-
 
 @keyframes fadeSlideUp {
     0% {
@@ -64,10 +61,6 @@ main .context h2 {
         opacity: 1;
         transform: translateY(0);
     }
-}
-
-main img{
-    max-width: 500px;
 }
 
 main .image-container,
@@ -86,7 +79,7 @@ main .context p {
     margin-bottom: 1.5em;
     max-width: 600px;
     line-height: 1.6;
-    color: #ddd;
+    color: #D3D9D4;
 }
 
 main .highlights {
@@ -98,7 +91,7 @@ main .highlights {
 main .highlights li {
     margin: 0.5em 0;
     font-size: 16px;
-    color: #ccc;
+    color: #748D92;
     display: flex;
     align-items: center;
 }
@@ -110,8 +103,8 @@ main .buttons {
 }
 
 .btn {
-    background-color: #5f9ea0;
-    color: white;
+    background-color: #124E66;
+    color: #D3D9D4;
     padding: 0.75em 1.5em;
     text-decoration: none;
     border-radius: 8px;
@@ -120,13 +113,14 @@ main .buttons {
 }
 
 .btn:hover {
-    background-color: #4a868a;
+    background-color: #2E3944;
 }
 
 .btn-secondary {
-    background-color: #444;
+    background-color: #748D92;
+    color: #212A31;
 }
 
 .btn-secondary:hover {
-    background-color: #333;
+    background-color: #5f757d;
 }
