--- a/pages/projects-page/project-styles.css
+++ b/pages/projects-page/project-styles.css
@@ -1,21 +1,22 @@
-body {
+
+ body {
     height: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
     font-family: Arial, sans-serif;
+    background-color: rgb(33, 42, 49); 
 }
 
 main {
     flex: 1;
     min-height: 700px;
-    background-color: #2f2a2a;
     padding: 2rem;
 }
 
 .projects {
-    background-color: #2f2a2a;
-    color: var(--text-color);
+    background-color: rgb(33, 42, 49); 
+    color: #D3D9D4; 
     text-align: center;
     padding: 2rem;
 }
@@ -23,7 +24,7 @@ main {
 .projects h2 {
     font-size: 3rem;
     margin-bottom: 2em;
-    color: var(--nav-link-bg);
+    color: #14E7A1;
     line-height: 1.3;
 }
 
@@ -37,7 +38,7 @@ main {
 }
 
 .project-card {
-    background-color: #3d3636;
+    background-color: #34454F;
     padding: 2em;
     border-radius: 0.5em;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
@@ -46,7 +47,7 @@ main {
     flex-grow: 1;
     max-width: 100%;
     text-align: center;
-    border: 1px solid #444;
+    border: 1px solid #748D92;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -54,7 +55,7 @@ main {
 
 .project-card:hover {
     transform: scale(1.05);
-    background-color: #4e4343;
+    background-color: #425763;
 }
 
 .project-card img {
@@ -66,12 +67,11 @@ main {
     border-radius: 1em;
     height: 10rem;
     object-fit: contain;
-
 }
 
 .project-card h3 {
     margin: 0.5em 0;
-    color: var(--nav-link-hover-bg);
+    color: #48E5C2;
     font-size: 1.5rem;
     line-height: 1.4;
 }
@@ -81,11 +81,12 @@ main {
     line-height: 1.6;
     margin-bottom: 1.5em;
     flex-grow: 1;
+    color: #D3D9D4;
 }
 
 .project-card .btn {
     display: inline-block;
-    background-color: var(--nav-link-bg);
+    background-color: #14E7A1;
     color: #000;
     padding: 0.6em 1.2em;
     border-radius: 0.5em;
@@ -97,11 +98,9 @@ main {
 }
 
 .project-card .btn:hover {
-    background-color: var(--nav-link-hover-bg);
+    background-color: #48E5C2;
     transform: translateY(-2px);
 }
-
-
 
 @media (max-width: 768px) {
     main {
