--- a/pages/certifications-page/styles.css
+++ b/pages/certifications-page/styles.css
@@ -41,6 +41,15 @@ main {
 }
 
 
+footer{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
 @media (max-width: 768px) {
     html, body {
         height: 100%;
